Refactor various classes to improve code readability and maintainability; replace hardcoded values with method calls and streamline parameter handling